z-index fix
» Increased the modal's z-index from 1 to 3, so the hint icons are greyed out with everything else

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ input#your-translation::placeholder {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     padding-top: 6%;
     left: 0;
     top: 0;
